--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <!--about me main info-->
         <div class="info-container">
           <h2 class="profession">Front-End Developer</h2>
-          <h1>Maria Trofimova</h1>
+          <h1>Bohdan Horovyi</h1>
           <p class="description">
             I am a Junior Front-End Developer. Proficient in HTML5, CSS3, JavaScript, jQuery, Gulp, SASS (SCSS), BEM methodology; plus have skills in building and developing Wordpress themes (self-educated). Passionate about usability and possess working knowledge of Adobe Photoshop & Figma.
 I strive for professional growth, self-education, ability to strengthen and expand my skills and experience in real projects among experienced software engineers.
